Fix chopped text bug
When using "Huge" font size, we use dp for measurements in some places,
and sp for measurements in others.  Since sp will grow based on the
chosen font size, this means that some of the text can no longer fit
into the room left on screen.

I changed this to use wrap_contents, and set a minimum height.  Wrap_contents will prevent text from being chopped even at large font sizes.  Min height will ensure that we don't make the list view rows too short.

BUG=582024

Review URL: https://codereview.chromium.org/1736553003

Cr-Commit-Position: refs/heads/master@{#377452}

--- a/chrome/android/java/res/layout/bookmark_row_content.xml
+++ b/chrome/android/java/res/layout/bookmark_row_content.xml
@@ -24,8 +24,9 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:minHeight="48dp"
             android:gravity="center_vertical"
             android:orientation="vertical" >
 
