MD Settings: fix padding on "Add new search engine" link
This is accomplished by putting the link inside of the list, so it has
similar padding.

R=dpapad@chromium.org
BUG=479359

Review URL: https://codereview.chromium.org/1736633003

Cr-Commit-Position: refs/heads/master@{#377473}

--- a/chrome/browser/resources/settings/search_engines_page/search_engine_entry.css
+++ b/chrome/browser/resources/settings/search_engines_page/search_engine_entry.css
@@ -43,4 +43,6 @@ paper-item:hover {
 
 paper-icon-button {
   -webkit-padding-end: 0;
+  padding-bottom: var(--search-engines-list-item-vertical-space);
+  padding-top: var(--search-engines-list-item-vertical-space);
 }
