Gallery: Set appropriate width for sliders explicitly.
paper-slider's default width is 200px, but it should be 172px according to the
design spec.
With this correct width, sliders will not overlap the cancel button.

BUG=588575
TEST=manually

Review URL: https://codereview.chromium.org/1727033005

Cr-Commit-Position: refs/heads/master@{#377537}

--- a/ui/file_manager/gallery/css/gallery.css
+++ b/ui/file_manager/gallery/css/gallery.css
@@ -889,6 +889,10 @@ button[disabled] {
   width: 16px;
 }
 
+paper-slider {
+  width: 172px;
+}
+
 paper-slider::shadow paper-progress::shadow #progressContainer {
   background-color: rgba(255, 255, 255, 0.2);
 }
