[Media Router] Show user email in header if cloud sink is present.
BUG=570797

Review URL: https://codereview.chromium.org/1680743006

Cr-Commit-Position: refs/heads/master@{#377582}

--- a/chrome/browser/resources/media_router/elements/media_router_container/media_router_container.css
+++ b/chrome/browser/resources/media_router/elements/media_router_container/media_router_container.css
@@ -150,6 +150,13 @@ paper-menu {
 .sink-domain {
   -webkit-padding-start: 6px;
   color: var(--subtext-color);
+  /* TODO(crbug/589697): Handle overflow of very long domain names. */
+}
+
+.sink-name {
+  min-width: 10%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .sink-subtext {
@@ -159,10 +166,10 @@ paper-menu {
 
 .sink-text {
   -webkit-padding-end: var(--dialog-padding-end);
+  display: inline-flex;
   flex-direction: row;
+  flex-flow: row nowrap;
   line-height: normal;
-  overflow: hidden;
-  text-overflow: ellipsis;
   white-space: nowrap;
   width: 250px;
 }
