MD Settings: Manage search engines, implement omnibox extensions section.
BUG=479359

Review URL: https://codereview.chromium.org/1726343004

Cr-Commit-Position: refs/heads/master@{#377668}

--- a/chrome/browser/resources/settings/search_engines_page/search_engines_list.css
+++ b/chrome/browser/resources/settings/search_engines_page/search_engines_list.css
@@ -2,10 +2,6 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
-:host {
-  --search-engines-list-item-vertical-space: 8px;
-}
-
 .headers {
   display: flex;
   padding: 10px 0;
@@ -21,7 +17,7 @@
 }
 
 div {
-  margin: 0 40px;
+  margin: var(--search-engines-list-margin);
 }
 
 ::content [is='action-link'] {
