[Android] Simplify "network predictions" preference to a boolean value.
This changes the network predictions preference on Android from a
tri-state (always, only on wifi, never) to a two-state (on, off). The
privacy settings screen now shows a simple checkbox to control this
preference.

"Always" and "only on wifi" are effectively merged into the new "on"
state, which has the same behavior as the old "only on wifi" state:
prefetching and prerendering are allowed only on wifi, while DNS
preresolving and TCP preconnect can happen on all connection types.

Under the hood, the "always" and "only on wifi" states still exist
temporarily, but are treated identically. This change doesn't affect
other platforms, which already use "always" and "only on wifi"
interchangably and show a simple checkbox in the UI.

BUG=585297

Review URL: https://codereview.chromium.org/1712943002

Cr-Commit-Position: refs/heads/master@{#377716}

--- a/chrome/android/java/res/xml/privacy_preferences.xml
+++ b/chrome/android/java/res/xml/privacy_preferences.xml
@@ -22,21 +22,10 @@
         android:key="safe_browsing"
         android:title="@string/safe_browsing_title"
         android:summary="@string/safe_browsing_summary" />
-
-    <!-- Only one of these network prediction preferences will be shown, depending on whether
-         the device has cellular support. -->
-    <org.chromium.chrome.browser.preferences.privacy.NetworkPredictionPreference
+    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
         android:key="network_predictions"
         android:title="@string/network_predictions_title"
-        android:persistent="false"
-        android:entries="@array/bandwidth_entries"
-        android:entryValues="@array/bandwidth_entry_values"
-        android:defaultValue="@string/network_prediction_wifi_only_value" />
-    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
-        android:key="network_predictions_no_cellular"
-        android:title="@string/network_predictions_title"
-        android:summary="@string/network_predictions_summary"
-        android:defaultValue="true" />
+        android:persistent="false" />
 
     <!-- Only one of these "Usage and crash reports" preferences will be shown, depending on whether
          the device has cellular support. -->
