[Offline pages] Introducing Offline status in the Omnibox
Adds verbose status to the location bar layout (phone and tablet), including the status separator. Shows the offline bolt icon (included) with the status when offline content is displayed.

Modifies the ToolbarModelImpl, to show original URL, when viewing an offline page.

BUG=585209

Review URL: https://codereview.chromium.org/1674133003

Cr-Commit-Position: refs/heads/master@{#377723}

--- a/chrome/android/java/res/values/colors.xml
+++ b/chrome/android/java/res/values/colors.xml
@@ -118,6 +118,7 @@
     <!-- LocationBar colors -->
     <color name="locationbar_light_hint_text">#80ffffff</color>
     <color name="locationbar_light_selection_color">#cc5595fe</color>
+    <color name="locationbar_verbose_status_color">#8a000000</color>
 
     <!-- Find in Page colors -->
     <color name="find_result_bar_background_color">#bfffffff</color>
