--- a/chrome/android/java/res/values/dimens.xml
+++ b/chrome/android/java/res/values/dimens.xml
@@ -239,6 +239,7 @@
     <dimen name="omnibox_suggestion_list_padding_bottom">0dp</dimen>
     <dimen name="location_bar_icon_width">36dp</dimen>
     <dimen name="tablet_toolbar_end_padding">6dp</dimen>
+    <dimen name="location_bar_status_separator_width">1dp</dimen>
     <!-- Offset applied to the toolbar menu button in document mode to align with the menu
          positioned inside the omnibox. -->
     <dimen name="document_toolbar_menu_offset">5dp</dimen>
