Network error interstitial update - add suggestions list + Add suggestions list to summary area + Merge Link Doctor suggestions into the main suggestions list.
BUG=518975,589405

Review URL: https://codereview.chromium.org/1639953002

Cr-Commit-Position: refs/heads/master@{#377784}

--- a/components/neterror/resources/neterror.css
+++ b/components/neterror/resources/neterror.css
@@ -94,6 +94,19 @@ a {
   margin-top: 15px;
 }
 
+#suggestions-list p {
+  -webkit-margin-after: 0;
+}
+
+#suggestions-list ul {
+  margin-top: 0;
+}
+
+.single-suggestion {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 #short-suggestion {
   margin-top: 5px;
 }
