--- a/components/neterror/resources/neterror.html
+++ b/components/neterror/resources/neterror.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0,
                                  maximum-scale=1.0, user-scalable=no">
   <title i18n-content="title"></title>
-  <link rel="stylesheet" href="../../security_interstitials/core/browser/resources/interstitial_v2.css">
+  <link rel="stylesheet" href="../../../components/security_interstitials/core/browser/resources/interstitial_v2.css">
   <link rel="stylesheet" href="neterror.css">
-  <script src="../../security_interstitials/core/browser/resources/interstitial_v2_mobile.js"></script>
+  <script src="../../../components/security_interstitials/core/browser/resources/interstitial_v2_mobile.js"></script>
   <script src="neterror.js"></script>
   <script src="offline.js"></script>
 </head>
@@ -19,6 +19,12 @@
       <div id="main-message">
         <h1 jsselect="heading" jsvalues=".innerHTML:msg"></h1>
         <p jsselect="summary" jsvalues=".innerHTML:msg"></p>
+        <div id="suggestions-list" jsdisplay="(suggestionsSummaryList && suggestionsSummaryList.length)">
+          <p jsvalues=".innerHTML:suggestionsSummaryListHeader"></p>
+          <ul jsvalues=".className:suggestionsSummaryList.length == 1 ? 'single-suggestion' : ''">
+            <li jsselect="suggestionsSummaryList" jsvalues=".innerHTML:summary"></li>
+          </ul>
+        </div>
         <div class="error-code" jscontent="errorCode"></div>
       </div>
     </div>
@@ -38,7 +44,7 @@
             jscontent="msg" jsvalues="title:title; .primary:primary">
         </button>
         <button id="show-offline-pages-button"
-            class="blue-button text-button"
+            class="gray-button text-button"
             onclick="showOfflinePagesButtonClick()"
             jsselect="showOfflinePagesButton"
             jscontent="msg">
@@ -52,11 +58,11 @@
       </div>
       <button id="details-button" class="text-button small-link"
          onclick="detailsButtonClick(); toggleHelpBox()" jscontent="details"
-         jsdisplay="(suggestions && suggestions.length) || searchUrl || diagnose"
+         jsdisplay="(suggestionsDetails && suggestionsDetails.length > 0) || diagnose"
          jsvalues=".detailsText:details; .hideDetailsText:hideDetails;"></button>
     </div>
     <div id="details" class="hidden">
-      <div class="suggestions" jsselect="suggestions">
+      <div class="suggestions" jsselect="suggestionsDetails">
         <div class="suggestion-header" jsvalues=".innerHTML:header"></div>
         <div class="suggestion-body" jsvalues=".innerHTML:body"></div>
       </div>
@@ -64,19 +70,6 @@
           onclick="diagnoseErrors()" jscontent="diagnose"
           jsdisplay="diagnose"></button>
       <div id="diagnose-frame" class="hidden"></div>
-      <form class="suggestions" jsdisplay="searchUrl"
-          jsvalues=".url:searchUrl; .trackingId:searchTrackingId"
-          onsubmit="trackClick(this.trackingId); return search(this.url);">
-        <div class="suggestion-header" jscontent="searchHeader"></div>
-        <div id="search-container">
-          <input type="text" name="q" id="search-box"
-              jsvalues=".value:searchTerms" />
-          <button type="submit" id="search-button" class="blue-button"
-              jsvalues="aria-label:searchHeader">
-            <img id="search-image">
-          </button>
-        </div>
-      </form>
     </div>
   </div>
   <div id="sub-frame-error">
