Make the lists in the password section flex up to 245px.
This addresses a TODO in the code to make the section flex.

BUG=546836

Review URL: https://codereview.chromium.org/1736163002

Cr-Commit-Position: refs/heads/master@{#377792}

--- a/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.css
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.css
@@ -2,11 +2,18 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
+:host {
+  display: flex;
+  flex-direction: column;
+}
+
 iron-list {
-  /* TODO(hcarmona): Make this flex. */
-  -webkit-padding-start: 8px;
-  height: 300px;
-  padding-top: 16px;
+  -webkit-padding-start: 16px;
+  flex: 1;
+  max-height: 245px;
+  overflow: auto;
+  padding-bottom: 8px;
+  padding-top: 8px;
 }
 
 paper-icon-button {
