--- a/chrome/android/java/res/xml/clear_browsing_data_preferences.xml
+++ b/chrome/android/java/res/xml/clear_browsing_data_preferences.xml
@@ -20,7 +20,8 @@
     <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
         android:key="clear_cookies_checkbox"
         android:persistent="false"
-        android:title="@string/clear_cookies_and_site_data_title" />
+        android:title="@string/clear_cookies_and_site_data_title"
+        android:summaryOn="@string/clear_cookies_and_site_data_summary" />
 
     <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
         android:key="clear_cache_checkbox"
