cros: Update feedback ui for cryptohome failure
- Use dialog style;
- Use check box for feedback permission;

BUG=585530

Review URL: https://codereview.chromium.org/1735793002

Cr-Commit-Position: refs/heads/master@{#377911}

--- a/chrome/browser/resources/chromeos/login/unrecoverable_cryptohome_error_card.css
+++ b/chrome/browser/resources/chromeos/login/unrecoverable_cryptohome_error_card.css
@@ -3,10 +3,6 @@
  * found in the LICENSE file.
  */
 
-iron-icon[icon='warning'] {
-  -webkit-margin-end: 15px;
-  -webkit-margin-start: 0;
-  color: var(--google-yellow-500);
-  margin-bottom: 0;
-  margin-top: 0;
+:host .content {
+  padding: 1em;
 }
