Use ChromeVox Compat for media router.
BUG=597974

Review URL: https://codereview.chromium.org/1853353002

Cr-Commit-Position: refs/heads/master@{#385208}

--- a/chrome/browser/resources/chromeos/chromevox/manifest.json.jinja2
+++ b/chrome/browser/resources/chromeos/chromevox/manifest.json.jinja2
@@ -35,6 +35,7 @@
           "chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/cvox2/background/panel.html",
           "chrome://md-settings*",
           "chrome://downloads*",
+          "chrome://media-router*",
           "chrome://oobe/login*",
           "https://accounts.google.com/embedded/setup/chromeos*"
       ],
