Fix sizing issues in the tab modal signin flow.
This change increases the height of the sign in portion of the flow to
be tall enough to fit the content without a scrollbar. Longer content
doesn't break the flow but makes the scrollbar appear.

It also fixes the size of the details text in the sync confirmation
portion to a pixel value to prevent it from being affected by content
font size settings.

BUG=593499,591131,589656

Review URL: https://codereview.chromium.org/1814513002

Cr-Commit-Position: refs/heads/master@{#385225}

--- a/chrome/browser/resources/sync_confirmation/sync_confirmation.css
+++ b/chrome/browser/resources/sync_confirmation/sync_confirmation.css
@@ -20,7 +20,6 @@ a {
 
 .container {
   background-color: white;
-  height: 351px;
   overflow: hidden;
   width: 448px;
 }
@@ -36,7 +35,7 @@ a {
 }
 
 .details {
-  height: 250px;
+  font-size: 13px;
   padding: 20px 24px;
 }
 
