Add animation for showing/hiding toolbar and location bar buttons
Add an animation that runs when showing/hiding toolbar buttons when
the screen size changes in Android N multi-window. When the app has
< 600dp width, the toolbar/location bar buttons fade out while the
location bar width increases. When the app has >= 600dp, the buttons
fade in while the location bar width decreases.

BUG=591109

Review URL: https://codereview.chromium.org/1845983002

Cr-Commit-Position: refs/heads/master@{#385322}

--- a/chrome/android/java/res/layout-sw600dp/location_bar.xml
+++ b/chrome/android/java/res/layout-sw600dp/location_bar.xml
@@ -42,7 +42,7 @@
     <org.chromium.chrome.browser.widget.TintedImageButton
         android:id="@+id/delete_button"
         style="@style/LocationBarButton"
-        android:layout_width="40dp"
+        android:layout_width="@dimen/location_bar_icon_width"
         android:layout_height="match_parent"
         android:scaleType="center"
         android:layout_marginEnd="44dp"
@@ -54,7 +54,7 @@
     <org.chromium.chrome.browser.widget.TintedImageButton
         android:id="@+id/bookmark_button"
         style="@style/LocationBarButton"
-        android:layout_width="40dp"
+        android:layout_width="@dimen/location_bar_icon_width"
         android:layout_height="match_parent"
         android:scaleType="center"
         android:layout_marginEnd="40dp"
@@ -65,7 +65,7 @@
     <org.chromium.chrome.browser.widget.TintedImageButton
         android:id="@+id/mic_button"
         style="@style/LocationBarButton"
-        android:layout_width="40dp"
+        android:layout_width="@dimen/location_bar_icon_width"
         android:layout_height="match_parent"
         android:scaleType="center"
         android:layout_gravity="end"
