Animate the bottom bar out if RemoteViews is updated with null
To smoothly animate the Bottom Bar, we need to move the bar as a child
of the content view holder. This way the content will be resized. After
the web content's resizing, we can animate the bottom bar out.

BUG=588168

Review URL: https://codereview.chromium.org/1856223002

Cr-Commit-Position: refs/heads/master@{#385345}

--- a/chrome/android/java/res/layout/custom_tabs_bottombar.xml
+++ b/chrome/android/java/res/layout/custom_tabs_bottombar.xml
@@ -7,5 +7,14 @@
     android:id="@+id/bottombar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    chrome:maxHeight="@dimen/toolbar_height_no_shadow" />
+    android:orientation="vertical"
+    chrome:maxHeight="@dimen/custom_tabs_bottom_bar_max_height" >
+
+    <View
+        android:id="@+id/bottombar_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/toolbar_shadow_normal"
+        android:scaleY="-1" />
+
+</org.chromium.chrome.browser.widget.BoundedLinearLayout>
