Mojo: Align string sizes when serializing a native type.
When determining the serialized size of a string field of a Mojo struct
with a typemapped type, that size is not aligned. When serializing that
string, each allocation in the buffer is aligned to 8 bytes. This can
result in the buffer requiring a re-allocation to accommodate the actual
serialized size and failed DCHECKs. This CL fixes this by aligning each
string size.

Review URL: https://codereview.chromium.org/1867483002

Cr-Commit-Position: refs/heads/master@{#385589}

--- a/mojo/public/tools/bindings/generators/cpp_templates/struct_serialization_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/struct_serialization_declaration.tmpl
@@ -100,9 +100,11 @@ struct {{struct.name}}_SerializerTraits_ {
         break;
 {%-   endif %}
 {%-   if pf.field.kind|is_string_kind %}
-      size += mojo::internal::String_Data::Traits::GetStorageSize(
-          static_cast<uint32_t>(mojo::StructTraits<{{struct.name}}, NativeType>
-              ::{{pf.field.name}}(input).size()));
+      size += mojo::internal::Align(
+          mojo::internal::String_Data::Traits::GetStorageSize(
+              static_cast<uint32_t>(
+                  mojo::StructTraits<{{struct.name}}, NativeType>
+                      ::{{pf.field.name}}(input).size())));
 {%-   elif pf.field.kind|is_object_kind %}
       NOTREACHED() << "Unsupported field type for StructTraits: "
                    << "{{pf.field.name}}";
