[Touch To Search] Move Promo to its own Control class.
This CL moves all Promo code to a subclass of
OverlayPanelInflater, and simplifies some parts of
the code. The code flow when the user makes a decision
is much simpler (it doesn't wait to set the preference
state when opting in). The acceptance animation now
makes use of the recently added callback
onPropertyAnimationFinished(). The preference state
is now controlled by the Promo Control and it is
not exposed publicly. Logic for when to show/hide
the Promo View has been simplified and does not
require overriding OverlayPanel methods like
setPanelHeight() and setPanelState().

BUG=595139

Review URL: https://codereview.chromium.org/1856243003

Cr-Commit-Position: refs/heads/master@{#385646}

--- a/chrome/android/java/res/values/colors.xml
+++ b/chrome/android/java/res/values/colors.xml
@@ -108,6 +108,7 @@
     <!-- Contextual Search colors -->
     <color name="contextual_search_promo_text_color">#333333</color>
     <color name="contextual_search_promo_background_color">#EEEEEE</color>
+    <color name="contextual_search_promo_border_color">#C2C2C2</color>
 
     <!-- Progress Bar colors -->
     <color name="progress_bar_foreground">@color/light_active_color</color>
