--- a/chrome/android/java/res/layout/contextual_search_promo_view.xml
+++ b/chrome/android/java/res/layout/contextual_search_promo_view.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2015 The Chromium Authors. All rights reserved.
+<!-- Copyright 2016 The Chromium Authors. All rights reserved.
      Use of this source code is governed by a BSD-style license that can be
      found in the LICENSE file. -->
 
-<org.chromium.chrome.browser.compositor.bottombar.contextualsearch.ContextualSearchOptOutPromo
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:chrome="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/contextual_search_opt_out_promo"
+    android:id="@+id/contextual_search_promo"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/contextual_search_promo_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="invisible">
 
-    <!-- marginTop = 16dp - 9dp (margin above) -->
+    <!-- The top margin is supposed to be 16d, but the promo background already sets a
+         insetTop of 9dp (see contextual_search_promo_background.xml). For this reason,
+         we only should set the remaining margin top, which is 7dp -->
     <org.chromium.ui.widget.TextViewWithClickableSpans
-        android:id="@+id/contextual_search_opt_out_text"
+        android:id="@+id/contextual_search_promo_text"
         android:color="@color/contextual_search_promo_text_color"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -28,8 +31,8 @@
         android:textSize="16sp" />
 
     <org.chromium.ui.widget.ButtonCompat
-        android:id="@+id/contextual_search_got_it_button"
-        android:layout_below="@id/contextual_search_opt_out_text"
+        android:id="@+id/contextual_search_allow_button"
+        android:layout_below="@id/contextual_search_promo_text"
         android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,16 +42,16 @@
         android:fontFamily="sans-serif-medium"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:text="@string/contextual_search_got_it_button"
+        android:text="@string/contextual_search_allow_button"
         android:textAllCaps="true"
         android:textColor="#FFF"
         android:textSize="14sp"
-        chrome:buttonColor="#4285F4" />
+        chrome:buttonColor="@color/light_active_color" />
 
     <Button
         android:id="@+id/contextual_search_no_thanks_button"
-        android:layout_below="@id/contextual_search_opt_out_text"
-        android:layout_toStartOf="@id/contextual_search_got_it_button"
+        android:layout_below="@id/contextual_search_promo_text"
+        android:layout_toStartOf="@id/contextual_search_allow_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
@@ -64,10 +67,10 @@
         style="@style/ButtonCompatBorderless" />
 
     <View
-        android:layout_below="@id/contextual_search_got_it_button"
+        android:layout_below="@id/contextual_search_allow_button"
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_marginTop="16dp"
-        android:background="#c2c2c2" />
+        android:background="@color/contextual_search_promo_border_color" />
 
-</org.chromium.chrome.browser.compositor.bottombar.contextualsearch.ContextualSearchOptOutPromo>
+</RelativeLayout>
