--- a/chrome/browser/resources/chromeos/chromevox/manifest.json.jinja2
+++ b/chrome/browser/resources/chromeos/chromevox/manifest.json.jinja2
@@ -33,6 +33,7 @@
           "chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/cvox2/background/background.html",
           "chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/chromevox/background/kbexplorer.html",
           "chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/cvox2/background/panel.html",
+          "chrome-extension://nlkncpkkdoccmpiclbokaimcnedabhhm/gallery.html*",
           "chrome://md-settings*",
           "chrome://downloads*",
           "chrome://media-router*",
