--- a/chrome/browser/resources/md_user_manager/control_bar.css
+++ b/chrome/browser/resources/md_user_manager/control_bar.css
@@ -2,25 +2,23 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
-#login-header-bar {
-  bottom: 0;
-  left: 0;
-  min-height: 32px;
+#container {
   padding-bottom: 12px;
   padding-top: 12px;
-  position: absolute;
-  right: 0;
 }
 
 paper-button {
   border-radius: 2px;
+  color: var(--paper-grey-600);
+  font-weight: 500;
   line-height: 32px;
+  margin: 0;
   min-width: 52px;
   padding: 0 16px;
 }
 
 #addUser {
-  -webkit-margin-end: 16px;
+  margin: 0 8px;
 }
 
 #logo {
