--- a/chrome/browser/resources/md_user_manager/create_profile.css
+++ b/chrome/browser/resources/md_user_manager/create_profile.css
@@ -4,18 +4,47 @@
 
 .container {
   color: var(--paper-grey-800);
-  margin: 64px auto;
-  width: 556px;
+  margin: 0 auto;
+  width: 624px;
+}
+
+#message-container {
+  background-color: var(--google-red-700);
+  color: white;
+  left: 0;
+  overflow: hidden;
+  padding: 10px 16px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+#message-container iron-icon {
+  height: 20px;
+  width: 20px;
+}
+
+#message-container #message {
+  -webkit-margin-start: 16px;
+}
+
+#message-container #supervised-user-import-existing {
+  color: inherit;
+  text-decoration: underline;
 }
 
 #title-bar {
   border-bottom: 1px solid rgba(0, 0, 0, .12);
   font-size: 16px;
-  padding-bottom: 20px;
+  font-weight: 500;
+  padding: 104px 0 16px;
 }
 
 #nameInput,
 paper-dropdown-menu {
+  --paper-input-container: {
+    padding: 0;
+  };
   --paper-input-container-input: {
     color: inherit;
     font-size: inherit;
@@ -23,27 +52,41 @@ paper-dropdown-menu {
 }
 
 #nameInput {
+  margin-bottom: 24px;
+  margin-top: 32px;
   width: 300px;
 }
 
 paper-dropdown-menu {
-  position: relative;
-  top: -1px;
+  margin-top: 12px;
   width: 200px;
 }
 
-#icons {
-  margin-top: 24px;
+paper-menu {
+  --paper-menu: {
+    color: inherit;
+    padding: 0;
+  };
+  --paper-menu-selected-item: {
+    font-weight: normal;
+  }
+}
+
+paper-menu paper-item {
+  font-size: inherit;
+  min-height: 40px;
 }
 
 #icons #wrapper {
-  margin: -12px -10px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: -12px;
 }
 
 #icons paper-button {
-  background: rgb(222, 222, 222);
+  background: var(--paper-grey-300);
   border: 1px solid rgba(0, 0, 0, .12);
-  margin: 12px 10px;
+  margin: 12px;
   min-width: 0;
   padding: 6px 4px;
 }
@@ -56,51 +99,61 @@ paper-dropdown-menu {
   outline: 1px dotted #666;
 }
 
-#createSupervisedContainer {
-  margin-top: 10px;
+#supervised-user-container {
+  margin-top: 24px;
 }
 
-#messageBubble {
-  -webkit-transition: max-height 200ms, padding 200ms;
-  background-color: var(--google-red-700);
-  border-radius: 4px;
-  color: white;
-  font-weight: bold;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 16px;
-  max-height: 50px;
-  overflow: hidden;
-  padding: 10px 10px;
-  text-align: center;
-  width: 80%;
+#supervised-user-container paper-checkbox {
+  --paper-checkbox-label-spacing: 16px;
+  --paper-checkbox-size: 20px;
 }
 
-#messageBubble:empty {
-  display: none;
+#supervised-user-container #learn-more-accounts {
+  -webkit-margin-start: 36px;
+}
+
+#supervised-user-container #learn-more {
+  display: block;
+  line-height: 20px;
 }
 
 #actions {
-  margin-top: 32px;
+  bottom: 16px;
+  display: flex;
+  position: absolute;
+  right: 16px;
+}
+
+:host-context([dir='rtl']) #actions {
+  left: 16px;
+  right: auto;
 }
 
 #actions paper-button {
   border-radius: 2px;
+  font-weight: 500;
   line-height: 32px;
+  margin: 0;
   min-width: 52px;
   padding: 0 16px;
 }
 
-#cancel {
+#actions paper-spinner {
+  align-self: center;
+  height: 20px;
+  width: 20px;
+}
+
+#actions #cancel {
   color: var(--paper-grey-600);
 }
 
-#save {
-  -webkit-margin-end: 0;
+#actions #save {
+  -webkit-margin-start: 8px;
   background: var(--google-blue-500);
   color: white;
 }
 
-#save[disabled] {
+#actions #save[disabled] {
   background: rgba(66, 133, 244, .5);
 }
